include data directory in setup install
added list function for finding files on the GFZ ICGEM

add widget for selecting model to jupyter notebook

updated utilities

--- a/Calculate Geoidal Undulation.ipynb
+++ b/Calculate Geoidal Undulation.ipynb
@@ -10,6 +10,7 @@
     "- [numpy: Scientific Computing Tools For Python](https://numpy.org)  \n",
     "- [matplotlib: Python 2D plotting library](http://matplotlib.org/)  \n",
     "- [cartopy: Python package designed for geospatial data processing](https://scitools.org.uk/cartopy)  \n",
+    "- [lxml: processing XML and HTML in Python](https://pypi.python.org/pypi/lxml)  \n",
     "\n",
     "#### PROGRAM DEPENDENCIES:  \n",
     "- utilities.py: download and management utilities for syncing files\n",
@@ -40,17 +41,42 @@
     "import matplotlib.colors as colors\n",
     "import matplotlib.ticker as ticker\n",
     "import cartopy.crs as ccrs\n",
+    "import ipywidgets as widgets\n",
     "import geoid_toolkit.utilities\n",
     "from geoid_toolkit.read_gravity_model import read_gravity_model\n",
     "from geoid_toolkit.geoid_undulation import geoid_undulation"
    ]
   },
   {
+   "source": [
+    "#### Choose gravity model"
+   ],
    "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-- list gfc models from GFZ ICGEM\n",
+    "MODELS = geoid_toolkit.utilities.icgem_list()\n",
+    "modelDropdown = widgets.Dropdown(\n",
+    "    options=sorted(MODELS.keys()),\n",
+    "    value='GGM05C',\n",
+    "    description='Model:',\n",
+    "    disabled=False,\n",
+    ")\n",
+    "display(modelDropdown)"
+   ]
+  },
+  {
    "source": [
     "#### Read gravity model coefficients"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -59,11 +85,12 @@
    "outputs": [],
    "source": [
     "#-- gfc file with spherical harmonic coefficients\n",
-    "GRAVITY = 'GGM05C.gfc'\n",
-    "#-- Download coefficients from CSR GGM05 model (Ries et al.)\n",
-    "geoid_toolkit.utilities.from_http(['http://icgem.gfz-potsdam.de','getmodel',\n",
-    "    'gfc','778a683780a5b0ad3163f4772b97b9075a0a13c389d2bd8ea3f891b64cfa383d',\n",
-    "    'GGM05C.gfc'], local=GRAVITY, verbose=True)\n",
+    "MODEL = MODELS[modelDropdown.value]\n",
+    "GRAVITY = geoid_toolkit.utilities.get_data_path(['data',MODEL[-1]])\n",
+    "MD5 = geoid_toolkit.utilities.get_hash(GRAVITY)\n",
+    "#-- Download coefficients from GFZ ICGEM server\n",
+    "geoid_toolkit.utilities.from_http(['http://icgem.gfz-potsdam.de',*MODEL],\n",
+    "    local=GRAVITY, hash=MD5, verbose=True)\n",
     "#-- use maximum degree and order of model\n",
     "LMAX = None\n",
     "#-- use original tide system\n",
@@ -174,7 +201,7 @@
     "ax1.get_xaxis().set_ticks([])\n",
     "ax1.get_yaxis().set_ticks([])\n",
     "#-- add main title\n",
-    "ax1.set_title('GGM05', fontsize=24)\n",
+    "ax1.set_title(modelDropdown.value, fontsize=24)\n",
     "ax1.title.set_y(1.01)\n",
     "\n",
     "#-- stronger linewidth on frame\n",
@@ -209,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
