rename gravity model reader

--- a/notebooks/Calculate-Geoidal-Undulation.ipynb
+++ b/notebooks/Calculate-Geoidal-Undulation.ipynb
@@ -15,7 +15,7 @@
     "#### PROGRAM DEPENDENCIES:  \n",
     "- utilities.py: download and management utilities for syncing files\n",
     "- geoid_undulation.py: geoidal undulation at a given latitude and longitude  \n",
-    "- read_gravity_model.py: reads the coefficients for a given gravity model file  \n",
+    "- read_ICGEM_harmonics.py: reads the coefficients for a given gravity model file  \n",
     "- calculate_tidal_offset.py: calculates the C20 offset for a tidal system  \n",
     "- real_potential.py: real potential at a latitude and height for gravity model  \n",
     "- norm_potential.py: normal potential of an ellipsoid at a latitude and height  \n",
@@ -43,7 +43,7 @@
     "import cartopy.crs as ccrs\n",
     "import ipywidgets as widgets\n",
     "import geoid_toolkit.utilities\n",
-    "from geoid_toolkit.read_gravity_model import read_gravity_model\n",
+    "from geoid_toolkit.read_ICGEM_harmonics import read_ICGEM_harmonics\n",
     "from geoid_toolkit.geoid_undulation import geoid_undulation"
    ]
   },
@@ -96,7 +96,7 @@
     "#-- use original tide system\n",
     "TIDE = None\n",
     "#-- read gravity model Ylms and change tide if specified\n",
-    "Ylms = read_gravity_model(GRAVITY,LMAX,TIDE=TIDE)\n",
+    "Ylms = read_ICGEM_harmonics(GRAVITY,LMAX=LMAX,TIDE=TIDE)\n",
     "#-- extract parameters\n",
     "R = np.float(Ylms['radius'])\n",
     "GM = np.float(Ylms['earth_gravity_constant'])\n",
