feat: add spatial module for ellipsoidal operations

--- a/notebooks/Calculate-Geoidal-Undulation.ipynb
+++ b/notebooks/Calculate-Geoidal-Undulation.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Computes and plots geoid undulations from a gravity model\n",
     "\n",
@@ -22,13 +21,12 @@
     "- norm_gravity.py: normal gravity of an ellipsoid at a latitude and height  \n",
     "- ref_ellipsoid.py: Computes parameters for a reference ellipsoid  \n",
     "- gauss_weights.py: Computes Gaussian weights as a function of degree  "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib\n",
@@ -45,20 +43,20 @@
     "import geoid_toolkit.utilities\n",
     "from geoid_toolkit.read_ICGEM_harmonics import read_ICGEM_harmonics\n",
     "from geoid_toolkit.geoid_undulation import geoid_undulation"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "#### Choose gravity model"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#-- list gfc models from GFZ ICGEM\n",
     "MODELS = geoid_toolkit.utilities.icgem_list()\n",
@@ -69,20 +67,20 @@
     "    disabled=False,\n",
     ")\n",
     "display(modelDropdown)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
+   "cell_type": "markdown",
    "source": [
     "#### Read gravity model coefficients"
    ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#-- gfc file with spherical harmonic coefficients\n",
     "MODEL = MODELS[modelDropdown.value]\n",
@@ -98,23 +96,23 @@
     "#-- read gravity model Ylms and change tide if specified\n",
     "Ylms = read_ICGEM_harmonics(GRAVITY,LMAX=LMAX,TIDE=TIDE)\n",
     "#-- extract parameters\n",
-    "R = np.float(Ylms['radius'])\n",
-    "GM = np.float(Ylms['earth_gravity_constant'])\n",
-    "LMAX = np.int(Ylms['max_degree']) if not LMAX else LMAX"
-   ]
+    "R = np.float64(Ylms['radius'])\n",
+    "GM = np.float64(Ylms['earth_gravity_constant'])\n",
+    "LMAX = np.int64(Ylms['max_degree']) if not LMAX else LMAX"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Calculate map of geoid height"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#-- PURPOSE: calculate geoid heights at a set of latitudes and longitudes\n",
     "dlon,dlat = (1.0,1.0)\n",
@@ -132,20 +130,20 @@
     "for i in range(nlat):\n",
     "    N[i,:] = geoid_undulation(np.ones((nlon))*lat[i], lon, REFERENCE,\n",
     "        Ylms['clm'], Ylms['slm'], LMAX, R, GM, GAUSS=GAUSS)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Create output plot"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#-- setup Plate Carree projection\n",
     "fig, ax1 = plt.subplots(num=1, nrows=1, ncols=1, figsize=(10.375,6.625),\n",
@@ -210,14 +208,16 @@
     "#-- output to file\n",
     "fig.subplots_adjust(left=0.04,right=0.96,bottom=0.05,top=0.96)\n",
     "plt.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
