--- a/notebooks/Calculate-Geoidal-Undulation.ipynb
+++ b/notebooks/Calculate-Geoidal-Undulation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Computes and plots geoid undulations from a gravity model\n",
     "\n",
@@ -21,12 +22,13 @@
     "- norm_gravity.py: normal gravity of an ellipsoid at a latitude and height  \n",
     "- ref_ellipsoid.py: Computes parameters for a reference ellipsoid  \n",
     "- gauss_weights.py: Computes Gaussian weights as a function of degree  "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib\n",
@@ -43,20 +45,20 @@
     "import geoid_toolkit.utilities\n",
     "from geoid_toolkit.read_ICGEM_harmonics import read_ICGEM_harmonics\n",
     "from geoid_toolkit.geoid_undulation import geoid_undulation"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Choose gravity model"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#-- list gfc models from GFZ ICGEM\n",
     "MODELS = geoid_toolkit.utilities.icgem_list()\n",
@@ -67,20 +69,20 @@
     "    disabled=False,\n",
     ")\n",
     "display(modelDropdown)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Read gravity model coefficients"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#-- gfc file with spherical harmonic coefficients\n",
     "MODEL = MODELS[modelDropdown.value]\n",
@@ -99,20 +101,20 @@
     "R = np.float64(Ylms['radius'])\n",
     "GM = np.float64(Ylms['earth_gravity_constant'])\n",
     "LMAX = np.int64(Ylms['max_degree']) if not LMAX else LMAX"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Calculate map of geoid height"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#-- PURPOSE: calculate geoid heights at a set of latitudes and longitudes\n",
     "dlon,dlat = (1.0,1.0)\n",
@@ -130,20 +132,20 @@
     "for i in range(nlat):\n",
     "    N[i,:] = geoid_undulation(np.ones((nlon))*lat[i], lon, REFERENCE,\n",
     "        Ylms['clm'], Ylms['slm'], LMAX, R, GM, GAUSS=GAUSS)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### Create output plot"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#-- setup Plate Carree projection\n",
     "fig, ax1 = plt.subplots(num=1, nrows=1, ncols=1, figsize=(10.375,6.625),\n",
@@ -157,7 +159,8 @@
     "#-- plot image with transparency using normalization\n",
     "im = ax1.imshow(N, interpolation='nearest', cmap=cm.viridis_r,\n",
     "    extent=(lon.min(),lon.max(),lat.min(),lat.max()),\n",
-    "    norm=norm, alpha=1.0, transform=ccrs.PlateCarree())\n",
+    "    norm=norm, alpha=1.0, transform=ccrs.PlateCarree(),\n",
+    "    origin='lower')\n",
     "\n",
     "#-- add generic coastlines\n",
     "ax1.coastlines()\n",
@@ -208,16 +211,7 @@
     "#-- output to file\n",
     "fig.subplots_adjust(left=0.04,right=0.96,bottom=0.05,top=0.96)\n",
     "plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
@@ -236,9 +230,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
