--- a/notebooks/Calculate-Geoidal-Undulation.ipynb
+++ b/notebooks/Calculate-Geoidal-Undulation.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-- list gfc models from GFZ ICGEM\n",
+    "# list gfc models from GFZ ICGEM\n",
     "MODELS = geoid_toolkit.utilities.icgem_list()\n",
     "modelDropdown = widgets.Dropdown(\n",
     "    options=sorted(MODELS.keys()),\n",
@@ -84,20 +84,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-- gfc file with spherical harmonic coefficients\n",
+    "# gfc file with spherical harmonic coefficients\n",
     "MODEL = MODELS[modelDropdown.value]\n",
     "GRAVITY = geoid_toolkit.utilities.get_data_path(['data',MODEL[-1]])\n",
     "MD5 = geoid_toolkit.utilities.get_hash(GRAVITY)\n",
-    "#-- Download coefficients from GFZ ICGEM server\n",
+    "# Download coefficients from GFZ ICGEM server\n",
     "geoid_toolkit.utilities.from_http(['http://icgem.gfz-potsdam.de',*MODEL],\n",
     "    local=GRAVITY, hash=MD5, verbose=True)\n",
-    "#-- use maximum degree and order of model\n",
+    "# use maximum degree and order of model\n",
     "LMAX = None\n",
-    "#-- use original tide system\n",
+    "# use original tide system\n",
     "TIDE = None\n",
-    "#-- read gravity model Ylms and change tide if specified\n",
+    "# read gravity model Ylms and change tide if specified\n",
     "Ylms = read_ICGEM_harmonics(GRAVITY,LMAX=LMAX,TIDE=TIDE)\n",
-    "#-- extract parameters\n",
+    "# extract parameters\n",
     "R = np.float64(Ylms['radius'])\n",
     "GM = np.float64(Ylms['earth_gravity_constant'])\n",
     "LMAX = np.int64(Ylms['max_degree']) if not LMAX else LMAX"
@@ -116,18 +116,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-- PURPOSE: calculate geoid heights at a set of latitudes and longitudes\n",
+    "# PURPOSE: calculate geoid heights at a set of latitudes and longitudes\n",
     "dlon,dlat = (1.0,1.0)\n",
     "lon = np.arange(-180+dlon/2.0,180+dlon/2.0,dlon)\n",
     "lat = np.arange(-90+dlat/2.0,90+dlat/2.0,dlat)\n",
     "nlon = len(lon)\n",
     "nlat = len(lat)\n",
-    "#-- reference to WGS84 ellipsoid\n",
+    "# reference to WGS84 ellipsoid\n",
     "REFERENCE = 'WGS84'\n",
-    "#-- Gaussian Smoothing Radius in km (default is no filtering)\n",
-    "#-- no gaussian smoothing\n",
+    "# Gaussian Smoothing Radius in km (default is no filtering)\n",
+    "# no gaussian smoothing\n",
     "GAUSS = 0\n",
-    "#-- calculate geoid at coordinates\n",
+    "# calculate geoid at coordinates\n",
     "N = np.zeros((nlat,nlon))\n",
     "for i in range(nlat):\n",
     "    N[i,:] = geoid_undulation(np.ones((nlon))*lat[i], lon, REFERENCE,\n",
@@ -147,25 +147,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-- setup Plate Carree projection\n",
+    "# setup Plate Carree projection\n",
     "fig, ax1 = plt.subplots(num=1, nrows=1, ncols=1, figsize=(10.375,6.625),\n",
     "    subplot_kw=dict(projection=ccrs.PlateCarree()))\n",
     "\n",
-    "#-- contours\n",
+    "# contours\n",
     "PRANGE = (-80,80,20)\n",
     "levels = np.arange(PRANGE[0],PRANGE[1]+PRANGE[2],PRANGE[2])\n",
     "norm = colors.Normalize(vmin=PRANGE[0],vmax=PRANGE[1])\n",
     "\n",
-    "#-- plot image with transparency using normalization\n",
+    "# plot image with transparency using normalization\n",
     "im = ax1.imshow(N, interpolation='nearest', cmap=cm.viridis_r,\n",
     "    extent=(lon.min(),lon.max(),lat.min(),lat.max()),\n",
     "    norm=norm, alpha=1.0, transform=ccrs.PlateCarree(),\n",
     "    origin='lower')\n",
     "\n",
-    "#-- add generic coastlines\n",
+    "# add generic coastlines\n",
     "ax1.coastlines()\n",
     "\n",
-    "#-- draw lat/lon grid lines\n",
+    "# draw lat/lon grid lines\n",
     "GRID = [15,15]\n",
     "grid_meridians = np.arange(0,360+GRID[0],GRID[0])\n",
     "grid_parallels = np.arange(-90,90+GRID[1],GRID[1])\n",
@@ -174,41 +174,41 @@
     "gl.xlocator = ticker.FixedLocator(grid_meridians)\n",
     "gl.ylocator = ticker.FixedLocator(grid_parallels)\n",
     "\n",
-    "#-- Add horizontal colorbar and adjust size\n",
-    "#-- extend = add extension triangles to upper and lower bounds\n",
-    "#-- options: neither, both, min, max\n",
-    "#-- pad = distance from main plot axis\n",
-    "#-- shrink = percent size of colorbar\n",
-    "#-- aspect = lengthXwidth aspect of colorbar\n",
+    "# Add horizontal colorbar and adjust size\n",
+    "# extend = add extension triangles to upper and lower bounds\n",
+    "# options: neither, both, min, max\n",
+    "# pad = distance from main plot axis\n",
+    "# shrink = percent size of colorbar\n",
+    "# aspect = lengthXwidth aspect of colorbar\n",
     "cbar = plt.colorbar(im, ax=ax1, extend='both', extendfrac=0.0375,\n",
     "    orientation='horizontal', pad=0.025, shrink=0.90, aspect=22, \n",
     "    drawedges=False)\n",
-    "#-- rasterized colorbar to remove lines\n",
+    "# rasterized colorbar to remove lines\n",
     "cbar.solids.set_rasterized(True)\n",
-    "#-- Add label to the colorbar\n",
+    "# Add label to the colorbar\n",
     "cbar.ax.set_xlabel('Geoidal Undulation', labelpad=10, fontsize=20)\n",
     "cbar.ax.set_ylabel('m', fontsize=20, rotation=0)\n",
     "cbar.ax.yaxis.set_label_coords(1.04, 0.15)\n",
-    "#-- Set the tick levels for the colorbar\n",
+    "# Set the tick levels for the colorbar\n",
     "cbar.set_ticks(levels)\n",
-    "cbar.set_ticklabels(['{0:d}'.format(ct) for ct in levels])\n",
-    "#-- ticks lines all the way across\n",
+    "cbar.set_ticklabels([f'{ct:d}' for ct in levels])\n",
+    "# ticks lines all the way across\n",
     "cbar.ax.tick_params(which='both', width=1, length=27, labelsize=20,\n",
     "    direction='in')\n",
     "\n",
-    "#-- axis = equal\n",
+    "# axis = equal\n",
     "ax1.set_aspect('equal', adjustable='box')\n",
-    "#-- no ticks on the x and y axes\n",
+    "# no ticks on the x and y axes\n",
     "ax1.get_xaxis().set_ticks([])\n",
     "ax1.get_yaxis().set_ticks([])\n",
-    "#-- add main title\n",
+    "# add main title\n",
     "ax1.set_title(modelDropdown.value, fontsize=24)\n",
     "ax1.title.set_y(1.01)\n",
     "\n",
-    "#-- stronger linewidth on frame\n",
+    "# stronger linewidth on frame\n",
     "ax1.outline_patch.set_linewidth(2.0)\n",
     "ax1.outline_patch.set_capstyle('projecting')\n",
-    "#-- output to file\n",
+    "# output to file\n",
     "fig.subplots_adjust(left=0.04,right=0.96,bottom=0.05,top=0.96)\n",
     "plt.show()"
    ]
@@ -216,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -230,7 +230,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
